[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/PlayerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/Died.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/Fail.ogg" type="AudioStream" id=5]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=8]
[ext_resource path="res://SFX/pain.ogg" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 56.6923
height = 73.1824

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 16.6458 )
shape = SubResource( 1 )

[node name="PlayerAnimation" parent="." instance=ExtResource( 1 )]
frame = 1

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
light_mask = 0
zoom = Vector2( 2, 2 )
limit_bottom = 3000

[node name="FlickerAnimation" type="AnimationPlayer" parent="."]
anims/Flicker = SubResource( 2 )

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer" type="Timer" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Pain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Died" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
[connection signal="animate" from="." to="PlayerAnimation" method="_on_Player_animate"]
[connection signal="offset" from="." to="Camera2D" method="_on_Player_offset"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
